# amxx-cmake-template

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/helper/: moduleconfig.h
